Navigation: Fix button and navigation z-index

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -1,6 +1,6 @@
 .navButtonContainer {
   position: fixed;
-  z-index: 11;
+  z-index: 1000;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
@@ -27,7 +27,7 @@
 .nav {
   position: fixed;
   right: -20rem;
-  z-index: 10;
+  z-index: 999;
   width: 20rem;
   height: 100%;
   padding: 5.25rem 4rem;
